--- a/Multiplication Table - CS162 PRJ 1/Multiplication Table - CS162 PRJ 1.vcxproj
+++ b/Multiplication Table - CS162 PRJ 1/Multiplication Table - CS162 PRJ 1.vcxproj
@@ -69,6 +69,7 @@
     <Image Include="..\..\..\misc\flowchart.png" />
   </ItemGroup>
   <ItemGroup>
+    <Text Include="..\..\..\..\feedback.txt" />
     <Text Include="..\..\..\misc\algorithm.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
