--- a/Multiplication Table - CS162 PRJ 1/Multiplication Table - CS162 PRJ 1.vcxproj.filters
+++ b/Multiplication Table - CS162 PRJ 1/Multiplication Table - CS162 PRJ 1.vcxproj.filters
@@ -34,5 +34,8 @@
     <Text Include="..\..\..\misc\algorithm.txt">
       <Filter>MISC</Filter>
     </Text>
+    <Text Include="..\..\..\..\feedback.txt">
+      <Filter>MISC</Filter>
+    </Text>
   </ItemGroup>
 </Project>
