--- a/Multiplication Table - CS162 PRJ 1/Multiplication Table - CS162 PRJ 1.vcxproj
+++ b/Multiplication Table - CS162 PRJ 1/Multiplication Table - CS162 PRJ 1.vcxproj
@@ -70,6 +70,7 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="MISC\Execution.PNG" />
+    <Image Include="MISC\flowchart.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
