--- a/Multiplication Table - CS162 PRJ 1/Multiplication Table - CS162 PRJ 1.vcxproj.filters
+++ b/Multiplication Table - CS162 PRJ 1/Multiplication Table - CS162 PRJ 1.vcxproj.filters
@@ -34,5 +34,8 @@
     <Image Include="MISC\Execution.PNG">
       <Filter>MISC</Filter>
     </Image>
+    <Image Include="MISC\flowchart.png">
+      <Filter>MISC</Filter>
+    </Image>
   </ItemGroup>
 </Project>
